# Plotype

./: .gitignore  Cargo.toml  cov.sh  doc.sh  hcov.sh
src/: cgp_default.rs  dependency.rs  event.rs  id.rs  main.rs  presets.rs
